--- a/passenger-counter-app/index.html
+++ b/passenger-counter-app/index.html
@@ -7,6 +7,8 @@
   <body>
     <h1>People entered:</h1>
     <h2 id="count-el">0</h2>
+    <button onclick="increment()">Increment</button>
+    <button id="btn-save">Save</button>
     <script src="index.js"></script>
   </body>
 </html>
