--- a/practices/index.html
+++ b/practices/index.html
@@ -5,11 +5,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>People entered:</h1>
-    <h2 id="count-el">0</h2>
-    <button onclick="increment()">Increment</button>
-    <button id="btn-save" onclick="save()">Save</button>
-    <p id="save-el">Previous entries:</p>
+    <h1>Practices</h1>
     <script src="index.js"></script>
   </body>
 </html>
