--- a/practices/index.html
+++ b/practices/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Practices</h1>
+    <h1>Blackjack</h1>
     <script src="index.js"></script>
   </body>
 </html>
