--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -13,7 +13,7 @@
     <!-- 1. Create a button that says START GAME. 
     Make it call a startGame() function when clicked -->
     <button onclick="startGame()">START GAME</button>
-    <button>NEW CARD</button>
+    <button onclick="newCard()">NEW CARD</button>
     <script src="index.js"></script>
   </body>
 </html>
