Object player updated

--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -10,6 +10,7 @@
     <p id="message-el">Want to play a round?</p>
     <p id="cards-el">Cards:</p>
     <p id="sum-el">Sum:</p>
+    <p id="player-el"></p>
     <!-- 1. Create a button that says START GAME. 
     Make it call a startGame() function when clicked -->
     <button onclick="startGame()">START GAME</button>
