list items added

--- a/chrome-extension/index.html
+++ b/chrome-extension/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <h1>People entered:</h1>
-    <input type="text" placeholder="asdfasda" />
+    <input type="text" id="input-el" placeholder="asdfasda" />
     <button id="btn-input">Save input</button>
+    <ul id="list-el"></ul>
     <script src="index.js"></script>
   </body>
 </html>
