--- a/practices/event-listener/index.html
+++ b/practices/event-listener/index.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Event listener</h1>
+    <div id="box">I'm a box</div>
     <script src="index.js"></script>
   </body>
 </html>
