Save button added

--- a/chrome-extension/index.html
+++ b/chrome-extension/index.html
@@ -9,6 +9,7 @@
     <h1>People entered:</h1>
     <input type="text" id="input-el" placeholder="asdfasda" />
     <button id="btn-input">Save input</button>
+    <button id="btn-save">SAVE TAB</button>
     <button id="btn-delete">DELETE ALL</button>
     <ul id="list-el"></ul>
     <script src="index.js"></script>
