this practice added

--- a/practices/this/index.html
+++ b/practices/this/index.html
@@ -5,7 +5,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Objects</h1>
+    <h1>This practice</h1>
+    <button id="myButton">Button</button>
     <script src="index.js"></script>
   </body>
 </html>
