--- a/practices/e/index.html
+++ b/practices/e/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>E Practice</h1>
+    <button id="myButton">Button</button>
     <script src="index.js"></script>
   </body>
 </html>
